@@ -1,23 +1,22 @@
 package com.example.demo;
 
 import io.vertx.core.Future;
-import io.vertx.pgclient.PgPool;
 import io.vertx.sqlclient.*;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
 import java.util.UUID;
 import java.util.function.Function;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
+
+import static java.util.stream.Collectors.toList;
 
 public class PostRepository {
     private static final Logger LOGGER = Logger.getLogger(PostRepository.class.getName());
 
-    private static Function<Row, Post> MAPPER = (row) ->
-        Post.of(
+    private static Function<Row, Post> MAPPER = (Row row) ->
+        new Post(
             row.getUUID("id"),
             row.getString("title"),
             row.getString("content"),
@@ -27,8 +26,8 @@ public class PostRepository {
 
     private final Pool client;
 
-    private PostRepository(Pool _client) {
-        this.client = _client;
+    private PostRepository(Pool sqlClient) {
+        this.client = sqlClient;
     }
 
     //factory method
@@ -37,18 +36,20 @@ public class PostRepository {
     }
 
     public Future<List<Post>> findAll() {
-        return client.query("SELECT * FROM posts ORDER BY id ASC")
+        String sql = "SELECT * FROM posts ORDER BY id ASC";
+        return client.query(sql)
             .execute()
             .map(rs -> StreamSupport.stream(rs.spliterator(), false)
                 .map(MAPPER)
-                .collect(Collectors.toList())
+                .toList()
             );
     }
 
 
     public Future<Post> findById(UUID id) {
         Objects.requireNonNull(id, "id can not be null");
-        return client.preparedQuery("SELECT * FROM posts WHERE id=$1").execute(Tuple.of(id))
+        String sql = "SELECT * FROM posts WHERE id=$1";
+        return client.preparedQuery(sql).execute(Tuple.of(id))
             .map(RowSet::iterator)
             .map(iterator -> {
                     if (iterator.hasNext()) {
@@ -60,36 +61,42 @@ public class PostRepository {
     }
 
     public Future<UUID> save(Post data) {
-        return client.preparedQuery("INSERT INTO posts(title, content) VALUES ($1, $2) RETURNING (id)").execute(Tuple.of(data.getTitle(), data.getContent()))
+        String sql = "INSERT INTO posts(title, content) VALUES ($1, $2) RETURNING (id)";
+        return client.preparedQuery(sql)
+            .execute(Tuple.of(data.title(), data.content()))
             .map(rs -> rs.iterator().next().getUUID("id"));
     }
 
     public Future<Integer> saveAll(List<Post> data) {
         var tuples = data.stream()
-            .map(
-                d -> Tuple.of(d.getTitle(), d.getContent())
-            )
-            .collect(Collectors.toList());
+            .map(d -> Tuple.of(d.title(), d.content()))
+            .toList();
 
-        return client.preparedQuery("INSERT INTO posts (title, content) VALUES ($1, $2)")
+        String sql = "INSERT INTO posts (title, content) VALUES ($1, $2)";
+        return client.preparedQuery(sql)
             .executeBatch(tuples)
             .map(SqlResult::rowCount);
     }
 
     public Future<Integer> update(Post data) {
-        return client.preparedQuery("UPDATE posts SET title=$1, content=$2 WHERE id=$3")
-            .execute(Tuple.of(data.getTitle(), data.getContent(), data.getId()))
+        String sql = "UPDATE posts SET title=$1, content=$2 WHERE id=$3";
+        return client.preparedQuery(sql)
+            .execute(Tuple.of(data.title(), data.content(), data.id()))
             .map(SqlResult::rowCount);
     }
 
     public Future<Integer> deleteAll() {
-        return client.query("DELETE FROM posts").execute()
+        String sql = "DELETE FROM posts";
+        return client.query(sql)
+            .execute()
             .map(SqlResult::rowCount);
     }
 
     public Future<Integer> deleteById(UUID id) {
         Objects.requireNonNull(id, "id can not be null");
-        return client.preparedQuery("DELETE FROM posts WHERE id=$1").execute(Tuple.of(id))
+        String sql = "DELETE FROM posts WHERE id=$1";
+        return client.preparedQuery(sql)
+            .execute(Tuple.of(id))
             .map(SqlResult::rowCount);
     }
 
